# AllegroGame

./: .gitignore  CMakeLists.txt  bomb_enemy.cpp  bomb_enemy.h  bomb_sprite.cpp  bomb_sprite.h  chasing_sprite.cpp  chasing_sprite.h  coin_sprite.cpp  coin_sprite.h  explosion_sprite.cpp  explosion_sprite.h  extra_credit.txt  image_sequence.cpp  image_sequence.h  keyboard_manager.cpp  keyboard_manager.h  main.cpp  obstruction_sprite.cpp  obstruction_sprite.h  phys_sprite.cpp  phys_sprite.h  player_sprite.cpp  player_sprite.h  sprite.cpp  sprite.h  world.cpp  world.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
nbproject/private/: private.xml
